@@ -221,6 +221,9 @@ $messages = array(
 	36  => array(
 		'message' => __('The file highlighted does not exist.  Please enter a valid file name.'),
 		'type' => 'error'),
+	'field_input_dupe' => array(
+		'message' => __('The input field was previously used but has been saved'),
+		'type' => 'info'),
 	'clog_invalid' => array(
 		'message' => __('Log file specified is not a Cacti log or archive file.'),
 		'type' => 'info'),
